--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -4,3 +4,13 @@
     font-family: verdana, "DejaVu Sans", sans-serif;
 
 }
+
+#second{
+    color: blue;
+    font-size: 36px;
+
+}
+
+.three{
+    font-size: 24px;
+}
