--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+ 
 }
 
 img {
@@ -10,7 +12,26 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin:10px;
+  padding: 10px;
+  
 }
+
+
+
+.images-with-info{
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  
+}
+
+.info{
+  max-width: 200px;
+}
+
+
+
 
 /* do not edit this footer */
 .footer {
