--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,14 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
 }
 
 img {
   width: 600px;
+  
 }
 
 button {
@@ -23,4 +27,62 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
 }
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+.header, 
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer{
+  background-color: #eee;
+}
+
+.left-links{
+  display: flex;
+  gap: 16px;
+  align-items: center;
+
+}
+
+.right-links{
+  display: flex;
+  gap: 16px;
+}
+
+
+
+.content{
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.button {
+  padding: 8px 16px;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+  
+}
+
+
+
